feature/Move docker to the development folder 2